[package]
name = "servo_allocator"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[target.'cfg(not(windows))'.dependencies]
mimalloc_rust = {git="https://github.com/seccompgeek/mimalloc_rust.git"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["heapapi"] }
